--- a/comprovante/index.html
+++ b/comprovante/index.html
@@ -6,7 +6,7 @@
     <title>Comprovante de Recebimento - Gov.br</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- User Data Manager -->
-    <script src="../../js/user-data-manager.js"></script>
+    <script src="../js/user-data-manager.js"></script>
     <script src="../../js/utmify-config.js"></script>
     <script src="../../js/utmify-setup.js"></script>
     <script src="../js/cotacao.js"></script>
@@ -368,6 +368,7 @@
       // Função para finalizar processo
       function finalizeProcess() {
         // Mostrar confirmação antes de redirecionar
+        window.UserDataManager.setupFinalize()
         if (confirm('Tem certeza que deseja finalizar o saque? Esta ação não pode ser desfeita.')) {
           console.log('🚀 Redirecionando para finalização...');
           
@@ -510,7 +511,6 @@
           if (countdown <= 0) {
             clearInterval(timer);
             
-            // Habilitar o botão após 18 segundos
             button.disabled = false;
             button.onclick = finalizeProcess;
             button.className = 'w-full py-4 px-6 rounded-full font-bold text-lg transition-all duration-300 flex items-center justify-center gap-2 bg-green-600 hover:bg-green-700 text-white transform hover:scale-105 cursor-pointer';
@@ -522,6 +522,7 @@
             `;
           }
         }, 1000);
+
 
         // Fechar dropdown ao clicar fora
         document.addEventListener('click', function(event) {
